Make the dropdown menus right-aligned with their respective buttons, instead of left-aligned. This prevents the right side of the menu from being cut off by the edge of the screen when the buttons are small

--- a/shared/css/user-menu.scss
+++ b/shared/css/user-menu.scss
@@ -34,17 +34,16 @@
   }
 
   .user_options, .create_options {
-    left: 0px;
     top: 50px;
   }
 
   .help_contents {
-    right: 0px;
     top: 58px;
   }
 
   .user_options, .create_options, .help_contents {
     position: absolute;
+    right: 0px;
     background-color: $white;
     border: 1px solid $charcoal;
 
